--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,11 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.8.0
+  equatable: ^2.0.7
+  dartz: ^0.10.1
+  dio: ^5.8.0+1
+  flutter_bloc: ^9.1.1
+  get_it: ^8.2.0
 
 dev_dependencies:
   flutter_test:
